# DeferredDXRenderer

./: CMakeLists.txt
config/: FindDirectX11.cmake  FindDirectXEffects.cmake  FindDirectXTK.cmake  FindGLM.cmake  FindXAudio2.cmake
data/effects/DX10/: bloomShader.fx  common.fx  diffuseShader.fx  fogShader.fx  nocolorShader.fx  shadow.fx  terrainShader.fx
data/effects/DX10Deferred/: diffuseShader.fx  fogShader.fx  nocolorShader.fx  oceanShader.fx  particleShader.fx  shadowShader.fx  terrainShader.fx  textureShader.fx
data/effects/DX10Deferred/include/: common.fx  depth.fx  lighting.fx  shadow.fx
data/localization/: english.ini  nederlands.ini
data/meshes/: basic_infantry.X  mesh.X  mesh_bin.X  planet.x  planet_high.x  skydome.x  tank.x
data/textures/: ocean_normalmap.dds  planet.dds  skydome_diffuse.dds  tank_diffuse.dds
data/textures/terrain/: Dirt.dds  Grass.dds  Sand.dds  rock.dds
data/textures/water/: ocean_normal.dds
data/userinterface/: MainMenu.ini  english_localization.ini  standardFont.ini
game/: CMakeLists.txt  Main.cpp  readme.txt
game/logic/: Game.cpp  Game.h  UnitHandler.cpp  UnitHandler.h
game/menu/: EditMenu.cpp  EditMenu.h  MainMenu.cpp  MainMenu.h  QuitDialog.h
game/object/: Entity.cpp  Entity.h  Tank.h  Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  Unit.cpp  Unit.h  Water.cpp  Water.h
game/state/: EditorState.cpp  EditorState.h  MPGameState.h  MenuState.cpp  MenuState.h  SPGameState.cpp  SPGameState.h
src/: CMakeLists.txt
src/audio/: AudioSystem.cpp  AudioSystem.h
src/game/: Component.h  Entity.h  EntityManager.h
src/gui/: DebugWND.cpp  DebugWND.h  Font.cpp  Font.h  GUIElement.cpp  GUIElement.h  GUInterface.cpp  GUInterface.h  MainElement.cpp  MainElement.h  UserWND.cpp  UserWND.h
src/gui/controls/: Button.h  RadioButton.h  Slider.h  Textbox.h
src/main/: CVarManager.cpp  CVarManager.h  Client.cpp  Client.h  ConVar.cpp  ConVar.h  EngineCore.cpp  EngineCore.h  Event.h  EventFn.h  EventManager.cpp  EventManager.h  KeybindManager.cpp  KeybindManager.h  MessageFn.h  RefObject.h  State.h  StateManager.cpp  StateManager.h  globalFunctions.cpp  globalFunctions.h  globals.h
src/render/: Camera.cpp  Camera.h  CameraNode.h  DebugElement.cpp  DebugElement.h  RenderModel.h  RenderSystem.h  SceneNode.h  VertexTypes.h  XMesh.cpp  XMesh.h
src/render/DX11/: DX11Context.cpp  DX11Context.h  DX11Global.cpp  DX11Global.h  DX11ParticleSystem.cpp  DX11ParticleSystem.h  DX11RenderSystem.cpp  DX11RenderSystem.h  DX11SceneManager.cpp  DX11SceneManager.h  DX11Shader.cpp  DX11Shader.h  DX11ShaderSystem.cpp  DX11ShaderSystem.h  DX11Surface.cpp  DX11Surface.h  DX11Texture.cpp  DX11Texture.h
